--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="/assets/index.61bc6a24.js"></script>
+    <script type="module" crossorigin src="/Calc-React/assets/index.61bc6a24.js"></script>
   </head>
   <body>
     <div id="root"></div>
